--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,12 @@
  
   "name": "SUP Sit Stat Checker",
   "version": "1.0.0",
-  "description": "Keeps track of your sits beyond the 2 month mark.",
+  "description": "Keeps track of your sits beyond the 3 month mark.",
 "icons": { "128": "icon_128x128.png" },
   "content_scripts": [{
-    "js": ["content.js"],
-    "matches": ["https://superiorservers.co/*"]
+    "js": ["steam.js", "content.js"],
+    "matches": ["https://superiorservers.co/*"],
+    "run_at": "document_end"
   }]
  
 }
